added custom tabbar

--- a/Momento/Info.plist
+++ b/Momento/Info.plist
@@ -25,7 +25,9 @@
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Allow access to upload content</string>
+	<string></string>
+	<key>NSAppleEventsUsageDescription</key>
+	<string></string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
